modules/gdscript/tests/scripts/analyzer/errors/overload_script_variable.gd
extends Node

var script: int

func test():
	pass
